--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,39 @@
 /* CSS FILE*/
 
+/*
+Check for overflow vha background-color og ikke border
+
+
+*/
+
 /* NAV BAR START //////////////////////*/
 
 ul{
     list-style-type: none;
     margin: 0;
-    padding: 0;
-    background-color: #333;
-
+    padding: 20px;
+    background-color: lightgray;
+    text-align: center;
 }
 
 li{
+    font-size: 20px;
     display: inline;
 
 }
 
+li a{
+    color: white;
+    padding: 20px;
+    padding: 20px;
+    border-radius: 12px;
+    background-color: gray;
+    text-decoration: none;
+}
+
+li a:hover{
+    background-color: aqua;
+}
 
 
 /* NAV BAR END //////////////////////*/
