--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,11 @@ h2{
     display: flex;
     justify-content: center;
 }
+
+.images > img {
+    border-radius: 20px;
+}
+
 /*
 img {
     width: 70%;
@@ -272,7 +277,8 @@ h3{
 .pRef{
     max-width: 70ch;
     font-size: 20px;
-
+    margin: 0 auto;
+    text-align: center;
 }
 
 
@@ -302,14 +308,6 @@ h3{
     width: 100%;
 }
 
-.content{
-    
-    padding-left: 2rem;
-
-}
-.content > p{
-    text-align: left;
-}
 
 /* Reflection Page Content END //////////////////////*/
 
@@ -319,6 +317,10 @@ h3{
 
 .accContent{
     max-width: 70ch;
+}
+
+.pAcc {
+    font-size: 20px;
 }
 
 /* Accessibility Page Content END //////////////////////*/
