--- a/assets/style.css
+++ b/assets/style.css
@@ -222,9 +222,10 @@ a {
 }
 
 .h2Link > a:hover {
-    box-shadow: 2px 2px 20px black;
-    background-color: #3789a1;
+    border-radius: 20px;
+    padding: 1%;
     color: white;
+    text-shadow: 2px 2px 50px black;
 }
 
 
